# p-presence

./: .gitignore  CMakeLists.txt  README.md  run.sh
art/: count_github_languages.py  generate_git_colors.py  languages.json  repository_usage.json  repository_usage_summary.json
art/old_icons/: icons.ai
src/: CMakeLists.txt  args.cc  args.h  async_replace.cc  async_replace.h  client.cc  client.h  client_socket.cc  client_socket.h  connection.cc  connection.h  discord.cc  discord.h  discord_presence.h  git.cc  git.h  git_hook.cc  git_hook.h  git_walker.cc  git_walker.h  language.cc  language.h  main.cc  server.cc  server.h  session.cc  session.h  timer.cc  timer.h  utils.cc  utils.h
